--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -184,8 +184,10 @@
     <Compile Include="Items\ItemSpawnEgg.cs" />
     <Compile Include="Items\ItemSteak.cs" />
     <Compile Include="Items\ItemStick.cs" />
+    <Compile Include="Items\ItemStoneAxe.cs" />
     <Compile Include="Items\ItemStoneHoe.cs" />
     <Compile Include="Items\ItemStoneShovel.cs" />
+    <Compile Include="Items\ItemStoneSword.cs" />
     <Compile Include="Items\ItemWoodenAxe.cs" />
     <Compile Include="Items\ItemWoodenHoe.cs" />
     <Compile Include="Items\ItemWoodenPickaxe.cs" />
