Added podzol and spawner

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -98,7 +98,9 @@
     <Compile Include="Blocks\LapsisBlock.cs" />
     <Compile Include="Blocks\LapsisOre.cs" />
     <Compile Include="Blocks\LitFurnace.cs" />
+    <Compile Include="Blocks\MonsterSpawner.cs" />
     <Compile Include="Blocks\Obsidian.cs" />
+    <Compile Include="Blocks\Podzol.cs" />
     <Compile Include="Blocks\Sandstone.cs" />
     <Compile Include="Blocks\Snow.cs" />
     <Compile Include="Blocks\Stationary.cs" />
