Don't do debug print if not in debug.

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -62,9 +62,10 @@
 		</appender>
 
 		<root>
-			<appender-ref ref="Console" />
+			<level value="INFO" />
+			<!--<appender-ref ref="Console" />-->
 			<appender-ref ref="RollingFile" />
-			<appender-ref ref="DebuggerAppender" />
+			<!--<appender-ref ref="DebuggerAppender" />-->
 		</root>
 	</log4net>
 
