Anvil static usage is synchronized. Player inventory for creative now working properly.

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -62,10 +62,10 @@
 		</appender>
 
 		<root>
-			<level value="INFO" />
-			<!--<appender-ref ref="Console" />-->
+			<level value="DEBUG" />
+			<appender-ref ref="Console" />
 			<appender-ref ref="RollingFile" />
-			<!--<appender-ref ref="DebuggerAppender" />-->
+			<appender-ref ref="DebuggerAppender" />
 		</root>
 	</log4net>
 
