--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Entities\PrimedTnt.cs" />
     <Compile Include="Entities\Snowball.cs" />
     <Compile Include="Entities\Projectile.cs" />
+    <Compile Include="GreyListManager.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="InventoryManager.cs" />
     <Compile Include="Items\FoodItem.cs" />
@@ -202,6 +203,7 @@
     <Compile Include="MotdProvider.cs" />
     <Compile Include="Net\InternalPing.cs" />
     <Compile Include="Net\McpeText.cs" />
+    <Compile Include="Net\SplitPartPackage.cs" />
     <Compile Include="Net\UUID.cs" />
     <Compile Include="Net\WiredAttribute.cs" />
     <Compile Include="Net\Skin.cs" />
