--- a/src/MiNET/MiNET.ServiceKiller/App.config
+++ b/src/MiNET/MiNET.ServiceKiller/App.config
@@ -1,15 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	
 	<configSections>
 		<!-- Level 1 -->
-		<section name="log4net"
-		  type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
 		<!-- Level 2 -->
 	</configSections>
 
 	<startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
 
 	<log4net>
@@ -19,8 +18,8 @@
 				<!--<conversionPattern value="%newline%file (%line): %level: %message%newline"/>-->
 			</layout>
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="DEBUG" />
-				<levelMax value="FATAL" />
+				<levelMin value="DEBUG"/>
+				<levelMax value="FATAL"/>
 			</filter>
 		</appender>
 
@@ -28,18 +27,18 @@
 			<layout type="log4net.Layout.PatternLayout">
 				<!-- Pattern to output the caller's file name and line number -->
 				<!--<conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />-->
-				<conversionPattern value="%5level [%.10class] - %message%newline" />
+				<conversionPattern value="%5level [%.10class] - %message%newline"/>
 			</layout>
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="INFO" />
-				<levelMax value="FATAL" />
+				<levelMin value="INFO"/>
+				<levelMax value="FATAL"/>
 			</filter>
 		</appender>
 
 		<root>
-			<appender-ref ref="Console" />
+			<appender-ref ref="Console"/>
 			<!--<appender-ref ref="RollingFile" />-->
-			<appender-ref ref="DebuggerAppender" />
+			<appender-ref ref="DebuggerAppender"/>
 		</root>
 	</log4net>
 
