Fix ACK/NAK and compile error (language level seem to be aproblem with appveyor).

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -55,7 +55,7 @@
 				<conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
 			</layout>
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="INFO"/>
+				<levelMin value="DEBUG"/>
 				<levelMax value="FATAL"/>
 			</filter>
 		</appender>
