--- a/src/MiNET/MiNET.Client/App.config
+++ b/src/MiNET/MiNET.Client/App.config
@@ -35,9 +35,24 @@
 			</filter>
 		</appender>
 
+	<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+			<file value="minetlog.log"/>
+			<appendToFile value="true"/>
+			<maximumFileSize value="10000KB"/>
+			<maxSizeRollBackups value="2"/>
+
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
+			</layout>
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="DEBUG"/>
+				<levelMax value="FATAL"/>
+			</filter>
+		</appender>
+
 		<root>
 			<appender-ref ref="Console"/>
-			<!--<appender-ref ref="RollingFile" />-->
+			<appender-ref ref="RollingFile" />
 			<appender-ref ref="DebuggerAppender"/>
 		</root>
 	</log4net>
