--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -170,6 +170,14 @@
     <Compile Include="Items\ItemGoldSword.cs" />
     <Compile Include="Items\ItemHoe.cs" />
     <Compile Include="Items\ItemIronAxe.cs" />
+    <Compile Include="Items\ItemLeatherBoots.cs" />
+    <Compile Include="Items\ItemLeatherChestplate.cs" />
+    <Compile Include="Items\ItemLeatherHelmet.cs" />
+    <Compile Include="Items\ItemLeatherLeggings.cs" />
+    <Compile Include="Items\ItemChainmailBoots.cs" />
+    <Compile Include="Items\ItemChainmailChestplate.cs" />
+    <Compile Include="Items\ItemChainmailHelmet.cs" />
+    <Compile Include="Items\ItemChainmailLeggings.cs" />
     <Compile Include="Items\ItemIronBoots.cs" />
     <Compile Include="Items\ItemIronChestplate.cs" />
     <Compile Include="Items\ItemIronHelmet.cs" />
