--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Blocks\WoodenDoor.cs" />
     <Compile Include="Explosion.cs" />
     <Compile Include="HealthManager.cs" />
+    <Compile Include="ExperienceManager.cs" />
     <Compile Include="PlayerInventory.cs" />
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\ItemBlock.cs" />
