Fixed client output of packages. Added experience orb. This package still not working.

--- a/src/MiNET/MiNET.Client/MiNET.Client.csproj
+++ b/src/MiNET/MiNET.Client/MiNET.Client.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="ClientUtils.cs" />
     <Compile Include="MiNetClient.cs" />
+    <Compile Include="ObjectDumper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
