--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -1,6 +1,6 @@
 #DO NOT REMOVE THIS LINE - MiNET Config
 #ip=0.0.0.0
-port=19134
+#port=19134
 
 #ForwardAllPlayers=true
 #ForwardIP=147.75.194.126
@@ -30,11 +30,8 @@ Difficulty=Normal
 #PCWorldFolder=D:\Development\Worlds\MiniGames\Pirate battle
 #PCWorldFolder=D:\Development\Worlds\ShatteredPVP
 #PCWorldFolder=D:\Development\Worlds\KingsLanding
-#PCWorldFolder=D:\Temp\MCPEWorldStore
 #PCWorldFolder=D:\Downloads\[CREATIVE]_Eldaria_V3.1_by_Aurelien_Sama\[CREATIVE]_Eldaria_V3.1_by_Aurelien_Sama
 #PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
-#PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
-#PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 #PCWorldFolder=D:\Development\Worlds\Greenfield v0.4.5
 #PCWorldFolder=D:\Development\Worlds\Sky Wars by JJtCool
 #PCWaterOffset=55
@@ -47,23 +44,9 @@ Difficulty=Normal
 #PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
-#PCWorldFolder=D:\Development\Repos\HyPE\Worlds\hub
-#PCWorldFolder=D:\Development\Repos\MapsPE\PELobby
-
-#HYPIXEL
-PCWorldFolder=D:\Development\Repos\MapsPE\hub
-
-#PCWorldFolder=D:\Development\Repos\MapsPE\sw.crossed
-#PCWorldFolder=D:\Development\Repos\MapsPE\Inca
-#PCWorldFolder=D:\Development\Worlds\Hypixel\arcadelobby
-#PCWorldFolder=D:\Development\Worlds\Hypixel\shire_sw
-#PCWorldFolder=D:\Development\Worlds\Hypixel\bbworld\World
-
-#HypeWorldFolder=D:\Development\Repos\HyPE\Worlds
 
 #EnableSecurity=true
 PluginDirectory=..\..\..\TestPlugin\bin\Debug;
-#PluginDirectory=D:\Development\Repos\HyPE\GameManager\bin\Debug
 
 #PluginDisabled=true
 #NiceLobby.Enabled=false
