Fixes crash at first start
If it will anvil map - it's crash. If you use loaded anvil map - can't crash. But for first loading i prefer use flat format.

--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -13,7 +13,7 @@
 
 #EnableStatistics=true
 motd=§6§l» §6gurun§7HackingServer§6§l «
-WorldProvider=anvil
+WorldProvider=flat
 #WorldProvider=flat
 ViewDistance=250
 GameMode=Survival
