--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -1,54 +1,31 @@
 #DO NOT REMOVE THIS LINE - MiNET Config
 #ip=0.0.0.0
-#port=19134
+port=19132
 
 #ForwardAllPlayers=true
 #ForwardIP=147.75.194.126
-#ForwardPort=19132
+№ForwardPort=19133
 
 # Throttling
 #MaxNumberOfPlayers=1
 #MaxNumberOfConcurrentConnects=1
-#InacvitityTimeout=2000
+InacvitityTimeout=10000000
 
 #EnableStatistics=true
 motd=§6§l» §6gurun§7HackingServer§6§l «
 WorldProvider=anvil
 #WorldProvider=flat
 ViewDistance=250
-GameMode=Survival
-#GameMode=Creative
+GameMode=Creative
+#GameMode=Creative Survival
 #Difficulty=Easy
 #Difficulty=Peaceful
 Difficulty=Normal
-
-#PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
-#PCWaterOffset=30
-#PCWorldFolder=D:\Development\Worlds\MiniGames\Capture the flag
-#PCWorldFolder=D:\Development\Worlds\MiniGames\Castle Wars
-#PCWorldFolder=D:\Development\Worlds\MiniGames\King of the hill
-#PCWorldFolder=D:\Development\Worlds\MiniGames\Pirate battle
-#PCWorldFolder=D:\Development\Worlds\ShatteredPVP
-#PCWorldFolder=D:\Development\Worlds\KingsLanding
-#PCWorldFolder=D:\Downloads\[CREATIVE]_Eldaria_V3.1_by_Aurelien_Sama\[CREATIVE]_Eldaria_V3.1_by_Aurelien_Sama
-#PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
-#PCWorldFolder=D:\Development\Worlds\Greenfield v0.4.5
-#PCWorldFolder=D:\Development\Worlds\Sky Wars by JJtCool
-#PCWaterOffset=55
-#PCWorldFolder=D:\Development\Worlds\Sky Wars 2.0 By JJtCool
-#PCWaterOffset=65
-#PCWorldFolder=D:\Development\Worlds\Gladiator Arena by Hypixel\Gladiator Arena - No Counters (Slow Computers)
-#PCWaterOffset=49
-
-# GOOD HUBS
-#PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
-#PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
-#PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
+PCWaterOffset=0
+#PCWorldFolder=world
 
 #EnableSecurity=true
-PluginDirectory=..\..\..\TestPlugin\bin\Debug;
+PluginDirectory=plugins;
 
-#PluginDisabled=true
-#NiceLobby.Enabled=false
-#CoreCommands.Enabled=false
-#Pets.Enabled=false
+PluginDisabled=false
+CoreCommands.Enabled=true
