--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -355,19 +355,6 @@
     <Compile Include="Utils\PlayerLocation.cs" />
     <Compile Include="Utils\Records.cs" />
     <Compile Include="Worlds\AnvilWorldProvider.cs" />
-    <Compile Include="Worlds\Anvil\BlockChangeEventArgs.cs" />
-    <Compile Include="Worlds\Anvil\Chunk.cs" />
-    <Compile Include="Worlds\Anvil\IDiskEntity.cs" />
-    <Compile Include="Worlds\Anvil\IWorldGenerator.cs" />
-    <Compile Include="Worlds\Anvil\Level.cs" />
-    <Compile Include="Worlds\Anvil\NibbleArray.cs" />
-    <Compile Include="Worlds\Anvil\Region.cs" />
-    <Compile Include="Worlds\Anvil\RuntimeInfo.cs" />
-    <Compile Include="Worlds\Anvil\Section.cs" />
-    <Compile Include="Worlds\Anvil\SpawnEntityEventArgs.cs" />
-    <Compile Include="Worlds\Anvil\TileEntity.cs" />
-    <Compile Include="Worlds\Anvil\UnrecognizedEntity.cs" />
-    <Compile Include="Worlds\Anvil\World.cs" />
     <Compile Include="Worlds\ChunkColumn.cs" />
     <Compile Include="Worlds\CoolWorldProvider.cs" />
     <Compile Include="Worlds\CraftNetAnvilWorldProvider.cs" />
