--- a/src/MiNET/TestPlugin/TestPlugin.csproj
+++ b/src/MiNET/TestPlugin/TestPlugin.csproj
@@ -60,15 +60,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CoreCommands.cs" />
-    <Compile Include="NiceLobby\NiceLobbyPlugin.cs" />
-    <Compile Include="NoDamageHealthManager.cs" />
+    <None Include="CoreCommands.cs" />
+    <None Include="NiceLobby\NiceLobbyPlugin.cs" />
+    <None Include="NoDamageHealthManager.cs" />
     <Compile Include="Pets\Pet.cs" />
     <Compile Include="Pets\PetHealthManager.cs" />
     <Compile Include="Pets\PetsPlugin.cs" />
     <Compile Include="Pets\PetTypes.cs" />
     <Compile Include="Properties\Annotations.cs" />
-    <Compile Include="TestPlugin.cs" />
+    <None Include="TestPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
