permission (data base)

--- a/src/MiNET/CorePlugins/packages.config
+++ b/src/MiNET/CorePlugins/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net46" />
   <package id="log4net" version="2.0.4" targetFramework="net46" />
+  <package id="Mono.Data.Sqlite.Portable" version="1.0.3.5" targetFramework="net46" />
+  <package id="System.Data.SQLite" version="1.0.98.1" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.98.1" targetFramework="net46" />
+  <package id="System.Data.SQLite.EF6" version="1.0.98.1" targetFramework="net46" />
+  <package id="System.Data.SQLite.Linq" version="1.0.98.1" targetFramework="net46" />
 </packages>
