--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -166,6 +166,7 @@
     <Compile Include="GreyListManager.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="InventoryManager.cs" />
+    <Compile Include="InventoryUtils.cs" />
     <Compile Include="Items\FoodItem.cs" />
     <Compile Include="Items\ItemApple.cs" />
     <Compile Include="Items\ItemBakedPotato.cs" />
