More item refactoring. Fix drops and pickup of drops. Clean methods in player inventory on the way.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -175,6 +175,7 @@
     <Compile Include="InventoryManager.cs" />
     <Compile Include="InventoryUtils.cs" />
     <Compile Include="Items\FoodItem.cs" />
+    <Compile Include="Items\ItemAir.cs" />
     <Compile Include="Items\ItemApple.cs" />
     <Compile Include="Items\ItemBakedPotato.cs" />
     <Compile Include="Items\ItemBed.cs" />
