Real hunger management. First cut, still a bit work in progress. Implemented based on MCPC 1.9 logic.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Entities\Snowball.cs" />
     <Compile Include="Entities\Projectile.cs" />
     <Compile Include="GreyListManager.cs" />
+    <Compile Include="HungerManager.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="InventoryManager.cs" />
     <Compile Include="InventoryUtils.cs" />
