--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -290,6 +290,8 @@
     <Compile Include="Particles\TerrainParticle.cs" />
     <Compile Include="Particles\WaterDripParticle.cs" />
     <Compile Include="Particles\WaterParticle.cs" />
+    <Compile Include="PlayerAttribute.cs" />
+    <Compile Include="PlayerAttributes.cs" />
     <Compile Include="PlayerFactory.cs" />
     <Compile Include="PlayerNetworkSession.cs" />
     <Compile Include="Plugins\Attributes\AuthorizeAttribute.cs" />
