--- a/src/MiNET/MiNET.ServiceKiller/App.config
+++ b/src/MiNET/MiNET.ServiceKiller/App.config
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	
+
 	<configSections>
 		<!-- Level 1 -->
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
 		<!-- Level 2 -->
 	</configSections>
 
-	<startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
-    </startup>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+	</startup>
 
 	<log4net>
 		<appender name="DebuggerAppender" type="log4net.Appender.DebugAppender">
@@ -35,10 +35,26 @@
 			</filter>
 		</appender>
 
+		<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+			<file value="minetlog.log"/>
+			<appendToFile value="true"/>
+			<maximumFileSize value="10000KB"/>
+			<maxSizeRollBackups value="2"/>
+
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
+			</layout>
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="DEBUG"/>
+				<levelMax value="FATAL"/>
+			</filter>
+		</appender>
+
 		<root>
-			<appender-ref ref="Console"/>
+			<level value="WARN"/>
+			<!--<appender-ref ref="Console"/>-->
 			<!--<appender-ref ref="RollingFile" />-->
-			<appender-ref ref="DebuggerAppender"/>
+			<!--<appender-ref ref="DebuggerAppender"/>-->
 		</root>
 	</log4net>
 
