--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Items\ItemRawBeef.cs" />
     <Compile Include="Items\ItemRawChicken.cs" />
     <Compile Include="Items\ItemRawPorkchop.cs" />
+    <Compile Include="LevelEventType.cs" />
     <Compile Include="LevelManager.cs" />
     <Compile Include="MessageType.cs" />
     <Compile Include="MotdProvider.cs" />
@@ -358,6 +359,7 @@
     <Compile Include="Security\User.cs" />
     <Compile Include="ServerInfo.cs" />
     <Compile Include="SessionManager.cs" />
+    <Compile Include="Sounds\Sound.cs" />
     <Compile Include="Utils\BoundingBox.cs" />
     <Compile Include="Utils\ChunkCoordinates.cs" />
     <Compile Include="Utils\EntityLocations.cs" />
