--- a/src/MiNET/MiNET.Service/packages.config
+++ b/src/MiNET/MiNET.Service/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="fNbt" version="0.6.3" targetFramework="net46" />
+  <package id="LibNoise" version="0.2" targetFramework="net46" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Topshelf" version="3.2.0" targetFramework="net45" />
 </packages>
