--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -9,7 +9,7 @@
 # Throttling
 #MaxNumberOfPlayers=1
 #MaxNumberOfConcurrentConnects=1
-#InacvitityTimeout=2000
+#InactivityTimeout=2000
 
 #EnableStatistics=true
 motd=§6§l» §6gurun§7HackingServer§6§l «
