--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -95,7 +95,7 @@
     <Compile Include="Blocks\CobblestoneWall.cs" />
     <Compile Include="Blocks\Cobweb.cs" />
     <Compile Include="Blocks\Cocoa.cs" />
-    <Compile Include="Blocks\Crops.cs" />
+    <Compile Include="Blocks\Wheat.cs" />
     <Compile Include="Blocks\RedMushroom.cs" />
     <Compile Include="Blocks\YellowFlower.cs" />
     <Compile Include="Blocks\DarkOakFenceGate.cs" />
@@ -113,7 +113,7 @@
     <Compile Include="Blocks\FlowerPot.cs" />
     <Compile Include="Blocks\GlassPane.cs" />
     <Compile Include="Blocks\GlowingObsidian.cs" />
-    <Compile Include="Blocks\GlowingRedstoneOre.cs" />
+    <Compile Include="Blocks\LitRedstoneOre.cs" />
     <Compile Include="Blocks\Glowstone.cs" />
     <Compile Include="Blocks\HardenedClay.cs" />
     <Compile Include="Blocks\HayBale.cs" />
@@ -124,12 +124,12 @@
     <Compile Include="Blocks\IronDoor.cs" />
     <Compile Include="Blocks\IronTrapdoor.cs" />
     <Compile Include="Blocks\ItemFrame.cs" />
-    <Compile Include="Blocks\JackoLantern.cs" />
+    <Compile Include="Blocks\LitPumpkin.cs" />
     <Compile Include="Blocks\JungleFenceGate.cs" />
     <Compile Include="Blocks\Ladder.cs" />
     <Compile Include="Blocks\Leaves.cs" />
     <Compile Include="Blocks\Lever.cs" />
-    <Compile Include="Blocks\Lilypad.cs" />
+    <Compile Include="Blocks\Waterlily.cs" />
     <Compile Include="Blocks\Melon.cs" />
     <Compile Include="Blocks\MobHead.cs" />
     <Compile Include="Blocks\MonsterEgg.cs" />
@@ -156,10 +156,10 @@
     <Compile Include="Blocks\RedstoneLampOff.cs" />
     <Compile Include="Blocks\RedstoneLampOn.cs" />
     <Compile Include="Blocks\RedstoneOre.cs" />
-    <Compile Include="Blocks\RedstoneRepeater.cs" />
-    <Compile Include="Blocks\RedstoneRepeaterOff.cs" />
+    <Compile Include="Blocks\PoweredRepeater.cs" />
+    <Compile Include="Blocks\UnpoweredRepeater.cs" />
     <Compile Include="Blocks\RedstoneTorch.cs" />
-    <Compile Include="Blocks\RedstoneTorchOff.cs" />
+    <Compile Include="Blocks\UnlitRedstoneTorch.cs" />
     <Compile Include="Blocks\RedstoneWire.cs" />
     <Compile Include="Blocks\SoulSand.cs" />
     <Compile Include="Blocks\Sponge.cs" />
@@ -168,14 +168,14 @@
     <Compile Include="Blocks\StoneButton.cs" />
     <Compile Include="Blocks\Stonecutter.cs" />
     <Compile Include="Blocks\StonePressurePlate.cs" />
-    <Compile Include="Blocks\SugarCane.cs" />
+    <Compile Include="Blocks\Reeds.cs" />
     <Compile Include="Blocks\Sunflower.cs" />
-    <Compile Include="Blocks\TopSnow.cs" />
+    <Compile Include="Blocks\SnowLayer.cs" />
     <Compile Include="Blocks\Trapdoor.cs" />
     <Compile Include="Blocks\TrappedChest.cs" />
     <Compile Include="Blocks\Tripwire.cs" />
     <Compile Include="Blocks\TripwireHook.cs" />
-    <Compile Include="Blocks\Vines.cs" />
+    <Compile Include="Blocks\Vine.cs" />
     <Compile Include="Blocks\WeightedPressurePlateHeavy.cs" />
     <Compile Include="Blocks\WeightedPressurePlateLight.cs" />
     <Compile Include="Blocks\WoodenButton.cs" />
@@ -205,8 +205,8 @@
     <Compile Include="Blocks\Ice.cs" />
     <Compile Include="Blocks\IronOre.cs" />
     <Compile Include="Blocks\JungleWoodStairs.cs" />
-    <Compile Include="Blocks\LapsisBlock.cs" />
-    <Compile Include="Blocks\LapsisOre.cs" />
+    <Compile Include="Blocks\LapisBlock.cs" />
+    <Compile Include="Blocks\LapisOre.cs" />
     <Compile Include="Blocks\LitFurnace.cs" />
     <Compile Include="Blocks\Obsidian.cs" />
     <Compile Include="Blocks\Sandstone.cs" />
