All blocks done!! There are some drops missing though.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -71,8 +71,8 @@
     <Compile Include="BlockFace.cs" />
     <Compile Include="Blocks\AcaciaFenceGate.cs" />
     <Compile Include="Blocks\AcaciaLeaves.cs" />
-    <Compile Include="Blocks\AcaciaWood.cs" />
-    <Compile Include="Blocks\AcaciaWoodStairs.cs" />
+    <Compile Include="Blocks\AcaciaLog.cs" />
+    <Compile Include="Blocks\AcaciaStairs.cs" />
     <Compile Include="Blocks\ActivatorRail.cs" />
     <Compile Include="Blocks\Anvil.cs" />
     <Compile Include="Blocks\Bed.cs" />
@@ -99,7 +99,7 @@
     <Compile Include="Blocks\RedMushroom.cs" />
     <Compile Include="Blocks\YellowFlower.cs" />
     <Compile Include="Blocks\DarkOakFenceGate.cs" />
-    <Compile Include="Blocks\DaylightSensor.cs" />
+    <Compile Include="Blocks\DaylightDetector.cs" />
     <Compile Include="Blocks\DeadBush.cs" />
     <Compile Include="Blocks\DetectorRail.cs" />
     <Compile Include="Blocks\DiamondBlock.cs" />
@@ -116,8 +116,8 @@
     <Compile Include="Blocks\LitRedstoneOre.cs" />
     <Compile Include="Blocks\Glowstone.cs" />
     <Compile Include="Blocks\HardenedClay.cs" />
-    <Compile Include="Blocks\HayBale.cs" />
-    <Compile Include="Blocks\InvertedDaylightSensor.cs" />
+    <Compile Include="Blocks\HayBlock.cs" />
+    <Compile Include="Blocks\DaylightDetectorInverted.cs" />
     <Compile Include="Blocks\InvisibleBedrock.cs" />
     <Compile Include="Blocks\IronBars.cs" />
     <Compile Include="Blocks\IronBlock.cs" />
@@ -131,14 +131,14 @@
     <Compile Include="Blocks\Lever.cs" />
     <Compile Include="Blocks\Waterlily.cs" />
     <Compile Include="Blocks\Melon.cs" />
-    <Compile Include="Blocks\MobHead.cs" />
+    <Compile Include="Blocks\Skull.cs" />
     <Compile Include="Blocks\MonsterEgg.cs" />
     <Compile Include="Blocks\MonsterSpawner.cs" />
     <Compile Include="Blocks\MossStone.cs" />
     <Compile Include="Blocks\Mycelium.cs" />
     <Compile Include="Blocks\NetherBrick.cs" />
     <Compile Include="Blocks\NetherBrickFence.cs" />
-    <Compile Include="Blocks\NetherQuartzOre.cs" />
+    <Compile Include="Blocks\QuartzOre.cs" />
     <Compile Include="Blocks\Netherrack.cs" />
     <Compile Include="Blocks\NetherReactorCore.cs" />
     <Compile Include="Blocks\NetherWart.cs" />
@@ -146,15 +146,15 @@
     <Compile Include="Blocks\PackedIce.cs" />
     <Compile Include="Blocks\Podzol.cs" />
     <Compile Include="Blocks\Portal.cs" />
-    <Compile Include="Blocks\Potato.cs" />
+    <Compile Include="Blocks\Potatoes.cs" />
     <Compile Include="Blocks\GoldenRail.cs" />
     <Compile Include="Blocks\Pumpkin.cs" />
     <Compile Include="Blocks\QuartzBlock.cs" />
     <Compile Include="Blocks\Rail.cs" />
     <Compile Include="Blocks\RedMushroomBlock.cs" />
     <Compile Include="Blocks\RedstoneBlock.cs" />
-    <Compile Include="Blocks\RedstoneLampOff.cs" />
-    <Compile Include="Blocks\RedstoneLampOn.cs" />
+    <Compile Include="Blocks\LitRedstoneLamp.cs" />
+    <Compile Include="Blocks\RedstoneLamp.cs" />
     <Compile Include="Blocks\RedstoneOre.cs" />
     <Compile Include="Blocks\PoweredRepeater.cs" />
     <Compile Include="Blocks\UnpoweredRepeater.cs" />
@@ -164,7 +164,7 @@
     <Compile Include="Blocks\SoulSand.cs" />
     <Compile Include="Blocks\Sponge.cs" />
     <Compile Include="Blocks\SpruceFenceGate.cs" />
-    <Compile Include="Blocks\StainedClay.cs" />
+    <Compile Include="Blocks\StainedHardenedClay.cs" />
     <Compile Include="Blocks\StoneButton.cs" />
     <Compile Include="Blocks\Stonecutter.cs" />
     <Compile Include="Blocks\StonePressurePlate.cs" />
@@ -176,15 +176,15 @@
     <Compile Include="Blocks\Tripwire.cs" />
     <Compile Include="Blocks\TripwireHook.cs" />
     <Compile Include="Blocks\Vine.cs" />
-    <Compile Include="Blocks\WeightedPressurePlateHeavy.cs" />
-    <Compile Include="Blocks\WeightedPressurePlateLight.cs" />
+    <Compile Include="Blocks\HeavyWeightedPressurePlate.cs" />
+    <Compile Include="Blocks\LightWeightedPressurePlate.cs" />
     <Compile Include="Blocks\WoodenButton.cs" />
     <Compile Include="Blocks\CoalBlock.cs" />
     <Compile Include="Blocks\CoalOre.cs" />
     <Compile Include="Blocks\Cobblestone.cs" />
     <Compile Include="Blocks\CobbleStoneStairs.cs" />
     <Compile Include="Blocks\CraftingTable.cs" />
-    <Compile Include="Blocks\DarkOakWoodStairs.cs" />
+    <Compile Include="Blocks\DarkOakStairs.cs" />
     <Compile Include="Blocks\DiamondOre.cs" />
     <Compile Include="Blocks\Dirt.cs" />
     <Compile Include="Blocks\DoubleStoneSlab.cs" />
