--- a/src/MiNET/MiNET.Client/packages.config
+++ b/src/MiNET/MiNET.Client/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="fNbt" version="0.6.3" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.1.0.0" targetFramework="net46" />
 </packages>
