--- a/src/MiNET/TestPlugin/packages.config
+++ b/src/MiNET/TestPlugin/packages.config
@@ -3,5 +3,6 @@
   <package id="fNbt" version="0.6.3" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.1.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
 </packages>
