Added the InPVP Plugin

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -18,7 +18,11 @@
 	</runtime>
 
 	<appSettings>
-		<!--<add key="minet:serverStartup" value="StartupDemo.ProductionStartup" />-->
+    <add key="PopupMessageInverval" value="20000" />
+    <add key="ChatMessageInverval" value="20000" />
+    <add key="PopupMessage" value="This is an automated popup message." />
+    <add key="ChatMessage" value="This is an automated chat message." />
+    <add key="DistanceFromSpawnInBlocks" value="15" />
 	</appSettings>
 
 	<log4net>
