--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -46,7 +46,7 @@ Difficulty=Normal
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
 #EnableSecurity=true
-PluginDirectory=..\..\..\TestPlugin\bin\Debug;
+PluginDirectory=..\..\..\MiNET.InPVP\bin\Debug;
 
 #PluginDisabled=true
 #NiceLobby.Enabled=false
