--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -12,6 +12,9 @@
 	</startup>
 
 	<runtime>
+		<gcServer enabled="true"/>
+		<gcConcurrent enabled="true"/>
+
 		<assemblyBinding>
 			<!--<probing aprivatePath="bin;bin2\subbin;bin3"/>-->
 		</assemblyBinding>
@@ -39,10 +42,17 @@
 				<!--<conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />-->
 				<conversionPattern value="%5level [%.10class] - %message%newline"/>
 			</layout>
+
+			<!--<filter type="log4net.Filter.LoggerMatchFilter">
+				<loggerToMatch value="MiNET.ServerInfo" />
+				<acceptOnMatch value="false" />
+			</filter>-->
+
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="INFO"/>
+				<levelMin value="WARN"/>
 				<levelMax value="FATAL"/>
 			</filter>
+
 		</appender>
 
 		<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
@@ -54,17 +64,29 @@
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
 			</layout>
+			
+			<!--<filter type="log4net.Filter.LoggerMatchFilter">
+				<loggerToMatch value="MiNET.Net.Datagram" />
+				<acceptOnMatch value="false" />
+			</filter>-->
+
+			<!--<filter type="log4net.Filter.LoggerMatchFilter">
+				<loggerToMatch value="MiNET.ServerInfo" />
+				<acceptOnMatch value="false" />
+			</filter>-->
+
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="DEBUG"/>
+				<levelMin value="INFO"/>
 				<levelMax value="FATAL"/>
 			</filter>
+
 		</appender>
 
 		<root>
 			<level value="DEBUG"/>
 			<appender-ref ref="Console"/>
 			<appender-ref ref="RollingFile"/>
-			<appender-ref ref="DebuggerAppender"/>
+			<!--<appender-ref ref="DebuggerAppender"/>-->
 		</root>
 	</log4net>
 
