--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -1,6 +1,6 @@
 #DO NOT REMOVE THIS LINE - MiNET Config
 #ip=0.0.0.0
-#port=19134
+port=19134
 
 #ForwardAllPlayers=true
 #ForwardIP=147.75.194.126
@@ -15,7 +15,8 @@
 motd=§6§l» §6gurun§7HackingServer§6§l «
 WorldProvider=anvil
 #WorldProvider=flat
-ViewDistance=250
+ViewDistance=11
+MaxViewDistance=22
 GameMode=Survival
 #GameMode=Creative
 #Difficulty=Easy
@@ -41,11 +42,14 @@ Difficulty=Normal
 #PCWaterOffset=49
 
 # GOOD HUBS
-#PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
+PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
+#PCWorldFolder=D:\Development\Repos\MapsPE\sg.station
+
 #EnableSecurity=true
+#PluginDirectory=..\..\..\TestPlugin\bin\Release;
 PluginDirectory=..\..\..\TestPlugin\bin\Debug;
 
 #PluginDisabled=true
